# desktop_organizer

./: .gitignore  organizer.py  pyproject.toml
desktop_organizer/: organizer.json  organizer.py
